@@ -57,23 +57,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <showDeprecation>true</showDeprecation>
-                    <showWarnings>true</showWarnings>
-                    <source>14</source>
-                    <target>14</target>
-                    <compilerArgs>
-                        <arg>${java.enable-preview}</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.internal.misc=org.reactivetoolbox.io.async</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
@@ -146,6 +129,30 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.examples.async=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.examples.async.server=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.async=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.async.server=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.scheduler=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.scheduler.impl=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.raw=ALL-UNNAMED
+                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.uring=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.misc=org.reactivetoolbox.io.async,ALL-UNNAMED
+
+                        --add-exports java.base/jdk.internal.misc=org.reactivetoolbox.io.async
+                        ${java.enable-preview}
+                        -Xmx1024m
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
