@@ -103,39 +103,35 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.5</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.lang=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.lang.support=ALL-UNNAMED
-
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.examples.async=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.examples.async.server=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.async=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.async.server=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.scheduler=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.scheduler.impl=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.raw=ALL-UNNAMED
-                        --add-opens org.reactivetoolbox.io.async/org.reactivetoolbox.io.uring=ALL-UNNAMED
-                        --add-opens java.base/jdk.internal.misc=org.reactivetoolbox.io.async,ALL-UNNAMED
-
-                        --add-exports java.base/jdk.internal.misc=org.reactivetoolbox.io.async
-                        ${java.enable-preview}
-                        -Xmx1024m
-                    </argLine>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.5</version>
                 <configuration>
                     <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
@@ -144,7 +140,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
@@ -152,6 +147,8 @@
                     <target>14</target>
                     <compilerArgs>
                         <arg>${java.enable-preview}</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.misc=org.reactivetoolbox.io.async</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -159,7 +156,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.1</version>
             </plugin>
         </plugins>
     </build>
